WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159746
[CSS][ARMv7] :nth-child() do not reserve enough registers if it is in backtracking chain
https://bugs.webkit.org/show_bug.cgi?id=159746
Summary
[CSS][ARMv7] :nth-child() do not reserve enough registers if it is in backtra...
Benjamin Poulain
Reported
2016-07-13 16:33:41 PDT
[CSS][ARMv7] :nth-child() do not reserve enough registers if it is in backtracking chain
Attachments
Patch
(3.47 KB, patch)
2016-07-13 16:42 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-07-13 16:42:15 PDT
Created
attachment 283586
[details]
Patch
Benjamin Poulain
Comment 2
2016-07-13 16:43:01 PDT
rdar://problem/26156169
Andreas Kling
Comment 3
2016-07-13 20:22:33 PDT
Comment on
attachment 283586
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2016-07-13 20:46:00 PDT
Comment on
attachment 283586
[details]
Patch Clearing flags on attachment: 283586 Committed
r203211
: <
http://trac.webkit.org/changeset/203211
>
WebKit Commit Bot
Comment 5
2016-07-13 20:46:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug